--- a/frontend/src/components/LandlordProfile.css
+++ b/frontend/src/components/LandlordProfile.css
@@ -135,6 +135,17 @@
     color: #666;
     margin-top: 5px;
 }
+.landlord-report-icon{
+    cursor: pointer;
+    margin-left: auto;
+    display: flex;
+    align-items:center;
+}
+
+.report-icon-img{
+    width: 40px;
+    height: 40px;
+}
 
 /* Bookmark Icon */
 .landlord-bookmark-icon {
