--- a/frontend/src/components/NoAccountSideMenu.css
+++ b/frontend/src/components/NoAccountSideMenu.css
@@ -1,9 +1,7 @@
-
-/*Define the font*/
-
+﻿/*Define the font*/
 @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/helvetica-bold.woff') format('truetype'); /* Adjust this path as necessary */
+    src: url('../fonts/Helvetica-Bold.ttf') format('truetype'); /* Adjust this path as necessary */
     font-weight: normal;
     font-style: normal;
 }
@@ -144,6 +142,7 @@ body, .side-menu {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    z-index: 1;
 }
 
 .map-container {
@@ -173,4 +172,3 @@ body, .side-menu {
             width: 250px;
         }
 }
-
